<resources>
    <string name="app_name">Personalize</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_navbar">Navigation Bar</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED Options</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="lockscreen_options">Lockscreen Options</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="performance">Performance</string>
    <string name="header_propmodder">Propmodder</string>
    <string name="title_about">About TheCollective</string>
    <string name="title_ui">General User Interface</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_statusbar_toggles">Statusbar Toggles</string>
    <string name="title_statusbar_battery">Statusbar Battery</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_led">LED Control</string>
    <string name="title_lockscreens">Lockscreen Options</string>
    <string name="title_lockscreens_targets">Lockscreen Targets</string>
    <string name="title_sound">Sound Settings</string>
    <string name="title_weather">Weather Settings</string>
    <string name="title_performance">Performance Settings</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_performance">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_summary_weather">@null</string>
    <string name="header_summary_vibrations">@null</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_user_interface_reset">Reset notification wallpaper</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="title_show_power_saver">Show power saver</string>
    <string name="title_show_screenshot">Show screenshot</string>
    <string name="title_show_torch_toggle">Show torch toggle</string>
    <string name="title_show_airplane_toggle">Show airplane toggle</string>
    <string name="title_show_navbar_hide">Show navigation bar toggle</string>
    <string name="title_pref_powersaving_pref_mode">Enable power saver</string>
    <string name="summary_pref_powersaving_pref_mode">@null</string>
    <string name="title_pref_powersaving_data_screen_off">Screen off data action</string>
    <string name="summary_pref_powersaving_data_screen_off">What to do with the data when the screen turns off</string>
    <string name="title_pref_powersaving_data_screen_off_delay">Data action delay</string>
    <string name="summary_pref_powersaving_data_screen_off_delay">How long to wait before applying data action?</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="group_applications">Applications</string>
    <string name="devs">The Crew</string>
    <string name="aocp">Android Open Collective Project</string>
    <string name="aocp_website_title">TheCollective Website</string>
    <string name="aocp_website_summary">www.collectivedev.org - Find all newest releases here.</string>
    <string name="aocp_source_title">TheCollective Source</string>
    <string name="aocp_source_summary">TheCollective is fully open source. You can always check out the latest source at github.com/TheCollective</string>
    <string name="aocp_review_title">TheCollective Code Review</string>
    <string name="aocp_review_summary">TheCollective\'s Gerrit Review instance for submitting and testing patches</string>
    <string name="aocp_gplus_title">Join us on GooglePlus</string>
    <string name="aocp_gplus_summary">https://plus.google.com/118410901028408865706/posts</string>
    <string name="about_aocp">About TheCollective</string>
    <string name="about_aocp_summary">@null</string>
	<string name="profile_johnsondr80">http://forum.xda-developers.com/member.php?u=3314129</string>
	<string name="profile_ruger94">http://forum.xda-developers.com/member.php?u=3716027</string>
	<string name="profile_fezzy102">http://forum.xda-developers.com/member.php?u=3199956</string>
	<string name="profile_danarki">http://forum.xda-developers.com/member.php?u=4023855</string>
	<string name="profile_boog">http://forum.xda-developers.com/member.php?u=983346</string>
	<string name="profile_crt60">http://forum.xda-developers.com/member.php?u=813691</string>
	<string name="profile_dman3285">http://forum.xda-developers.com/member.php?u=2879389</string>
	<string name="profile_robm1911">http://forum.xda-developers.com/member.php?u=3232214</string>
	<string name="profile_mortem_taum">http://forum.xda-developers.com/member.php?u=3595808</string>
	<string name="profile_silverwrx03">http://forum.xda-developers.com/member.php?u=3067981</string>
	<string name="profile_kingmurry">http://forum.xda-developers.com/member.php?u=3509434</string>
	<string name="profile_ee23hd2">http://forum.xda-developers.com/member.php?u=2535093</string>
	<string name="profile_plexicle">http://forum.xda-developers.com/member.php?u=4493228</string>
	<string name="profile_kornklown69">http://forum.xda-developers.com/member.php?u=3534303</string>
        <string name="profile_thegreatergood">http://forum.xda-developers.com/member.php?u=4846679</string>
    <string name="bootani_cat">Boot Animation</string>
    <string name="navbar_cat">NavBar</string>
    <string name="notification_cat">Notification</string>
    <string name="tabletUI_cat">Tablet UI</string>
    <string name="enable_volume_options">Enable Volume Panel</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications on the status bar</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications (requires UI restart)</string>
    <string name="disable_bootanimation_title">Disable boot animation</string>
    <string name="custom_bootanimation_title">Custom boot animation</string>
    <string name="custom_bootanimation_summary">Select bootanimation zip from sdcard. Previous bootanimation will be backed up to /system/media.</string>
    <string name="install_file_manager_error">No application found to pick the zip file. Please install a file manager.</string>
    <string name="notification_wallpaper_title">Choose notification background</string>
    <string name="notification_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="alpha_dialog_title">Set alpha value</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Enter an empty label to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In statusbar, while typing (requires reboot)</string>
    <string name="rotate_180_title">Allow 180 degree rotation</string>
    <string name="rotate_180_summary">Allow your device to rotate upside down!</string>
    <string name="recent_kill_all">Enable kill-all-button</string>
    <string name="recent_kill_all_summary">Displays a button to kill all apps on recents window (requires UI restart)</string>
    <string name="kill_app_longpress_back">Hold back to kill</string>
    <string name="kill_app_longpress_back_summary">Holding back will kill the current activity</string>
    <string name="tablet_ui">Force Tablet UI</string>
    <string name="tablet_ui_summary">This will switch to Tablet UI (requires reboot)</string>
    <string name="bootanimation_preview">Bootanimation preview</string>
    <string name="apply">Apply</string>
    <string name="creating_preview">Creating preview...</string>
    <string name="error_reading_zip_file">Error reading zip file</string>
    <string name="error_creating_preview">Error creating preview</string>
    <string name="multipane_ui">Enable Dual panel</string>
    <string name="multipane_ui_summary">This will Enable/Disable Dual panel view (requires reboot)</string>
    <string name="alt_resolver">Use Alt Default App Grid</string>
    <string name="alt_resolver_summary">Use Alternate (GB style) Default App Picker</string>
    <string name="lcd_density_title">LCD Density</string>
    <string name="lcd_density_summary">unknown</string>
    <string name="current_lcd_density">"Current LCD Density: "</string>
    <string name="lcd_density_wizard">LCD Density Wizard</string>
    <string name="follow_through_title">Follow through!</string>
    <string name="follow_through_summary">Make sure you follow the steps one-by-one and complete each one before proceeding to the next.</string>
    <string name="stock_density_title">1. Change LCD Density to stock value</string>
    <string name="stock_density_summary">Tablets and older phones use 160. Most phones use 240. Galaxy Nexus uses 320 by default.</string>
    <string name="stock_density_changed_summary">"Density set to: "</string>
    <string name="reboot_title">2. Reboot!</string>
    <string name="reboot_summary">Come back here after the reboot and complete the rest of the steps!</string>
    <string name="clear_market_data_title">3. Clear market data</string>
    <string name="clear_market_data_cleared">Market data cleared</string>
    <string name="clear_market_data_donot_cleared">"Market data couldn't be cleared, please clear it yourself!"</string>
    <string name="dpi">DPI</string>
    <string name="open_market_title">4. Open Market and hit accept</string>
    <string name="open_market_summary">Press back when done to return here.</string>
    <string name="open_market_summary_could_not_open">"Couldn't open the market! If you're sure it's installed, open it yourself from the launcher."</string>
    <string name="custom_density_title">5. Change density to whatever you like!</string>
    <string name="custom_density_summary">If you ever have compatibility issues with the market, be sure to return here and repeat the process.</string>
    <string name="propmodder_title">Propmodder</string>
    <string name="vibrations">Vibrations</string>
</resources>