<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:id="@+id/about"
        android:fragment="com.collective.personalize.fragments.About"
        android:title="@string/about_aocp"
	android:icon="@drawable/ic_rom_control_about"
        android:summary="@string/about_aocp_summary" />

    <header android:title="@string/user_interface" />

    <header
        android:id="@+id/user_interface"
        android:fragment="com.collective.personalize.fragments.UserInterface"
        android:title="@string/general_ui"
        android:icon="@drawable/ic_rom_control_general_ui"
        android:summary="@string/header_summary_general_ui" />

    <header
        android:id="@+id/lockscreen"
        android:fragment="com.collective.personalize.fragments.Lockscreens"
        android:title="@string/lockscreen_options"
        android:icon="@drawable/ic_rom_control_lockscreens"
        android:summary="@string/header_summary_lockscreens" />

    <header
        android:id="@+id/power_menu"
        android:fragment="com.collective.personalize.fragments.PowerMenu"
        android:title="@string/power_menu"
        android:icon="@drawable/ic_rom_control_power_menu"
        android:summary="@string/header_summary_power_menu" />

    <header
        android:id="@+id/propmodder"
        android:fragment="com.collective.personalize.fragments.PropModder"
        android:icon="@drawable/ic_propmodder"
        android:title="@string/propmodder_title" />

    <header
        android:id="@+id/statusbar"
        android:title="@string/header_statusbar" />

    <header
        android:id="@+id/statusbar_battery"
        android:title="@string/battery"
        android:fragment="com.collective.personalize.fragments.StatusBarBattery"
        android:icon="@drawable/ic_rom_control_battery"
        android:summary="@string/header_summary_battery" />

    <header
        android:id="@+id/statusbar_clock"
        android:fragment="com.collective.personalize.fragments.StatusBarClock"
        android:summary="@string/header_summary_clock"
        android:icon="@drawable/ic_rom_control_clock"
        android:title="@string/clock" />
    <header
        android:id="@+id/statusbar_toggles"
        android:fragment="com.collective.personalize.fragments.StatusBarToggles"
        android:icon="@drawable/ic_rom_control_toggles"
        android:summary="@string/header_summary_toggles"
        android:title="@string/toggles_layout" />

 <!-- <header
        android:id="@+id/statusbar_signal"
        android:title="@string/signal"
        android:fragment="com.collective.personalizefragments.StatusBarSignal"
        android:icon="@drawable/ic_rom_control_signal"
        android:summary="@string/header_summary_signal" />  -->
     
    <header
        android:id="@+id/system"
        android:title="@string/header_system" />

    <header
        android:id="@+id/led"
        android:fragment="com.collective.personalize.fragments.LEDControl"
        android:title="@string/led_options"
        android:icon="@drawable/ic_rom_control_led"
        android:summary="@string/header_summary_led" />

    <header
        android:id="@+id/sound"
        android:fragment="com.collective.personalize.fragments.Sound"
        android:title="@string/sound"
        android:icon="@drawable/ic_rom_control_sound"
        android:summary="@string/header_summary_sound" />

    <header
        android:id="@+id/weather"
        android:fragment="com.collective.personalize.fragments.Weather"
        android:title="@string/weather"
        android:summary="@string/header_summary_weather"
        android:icon="@drawable/ic_rom_control_weather" />

    <header
        android:id="@+id/vibrations"
        android:fragment="com.collective.personalize.fragments.Vibrations"
        android:title="@string/vibrations"
        android:summary="@string/header_summary_vibrations"
        android:icon="@drawable/ic_rom_control_vibrations" />


    <header
        android:id="@+id/tools"
        android:title="@string/tools" />

    <header android:icon="@drawable/ic_rom_control_performance"
            android:title="@string/performance">
        <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.collective.personalize.performance.Performance"
                android:targetPackage="com.collective.personalize" />
    </header>


</preference-headers>
